--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@ header{
 	height: 100px;
 	line-height: 100px;
 	border-radius: 10px;
-	background: #666;
+	background: red;
 	margin: 1% 0;
 }
 nav{
